tf_serving/kubernetes/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: occlum-tf-serving

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: occlum-tf-serving-service
  name: occlum-tf-serving-service
  namespace: occlum-tf-serving
spec:
  type: NodePort
  ports:
  - name: grpc
    protocol: TCP
    port: 8500
    targetPort: 8500
    nodePort: 30500
  selector:
    app: occlum-tf-serving-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: occlum-tf-serving-deployment
  namespace: occlum-tf-serving
spec:
  selector:
    matchLabels:
      app: occlum-tf-serving-app
  replicas: 1
  template:
    metadata:
      labels:
        app: occlum-tf-serving-app
    spec:
      containers:
      - name: occlum-tf-serving-container
        image: occlum_tf_serving:latest
        imagePullPolicy: Never
        ports:
        - name: grpc
          containerPort: 8500
        volumeMounts:
        - name: sgx-enclave
          mountPath: /dev/sgx_enclave
        - name: sgx-provision
          mountPath: /dev/sgx_provision
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: "32"
          requests:
            cpu: "32"
      volumes:
      - name: sgx-enclave
        hostPath:
          path: /dev/sgx/enclave
      - name: sgx-provision
        hostPath:
          path: /dev/sgx/provision
